# beebeesee-2021

./: .gitignore  LICENSE  ML_v1.0.py  README.md  convertKeras2JS.py  debug.cmd  debug.sh  deploy.cmd  deploy.sh  facetk.py  pyproject.toml  randomizeImages.py  requirements.txt  setup.sh  train.py
android/: README.md  build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/python/face/: __init__.py
android/gradle/wrapper/: gradle-wrapper.properties
archive-android/: settings.gradle
archive-android/app/src/main/: AndroidManifest.xml
archive-android/app/src/main/python/: face.py
beebeesee/: __main__.py  app.py  brain.py  cli.py  info.py  site.py
beebeesee/util/: fr.py
desktop/: README.md
desktop/face-windows/: face-windows.sln
desktop/face-windows/face-windows/: Resource.h  face-windows.cpp  face-windows.rc  face-windows.vcxproj  face-windows.vcxproj.filters
desktop/faceUI/: README.md  build.gradle  settings.gradle
desktop/facetk/: .gitignore  deploy.py  face.spec  facetk.spec  setup.py
desktop/facetk/face/: gooey.py
face/: proto.py  widgets.py
face-tkinter/: .gitignore  __init__.py  facetk.py  main.py
face-tkinter/python/: convert.cmd
facetk/: Pipfile  README.md  README.rst  main.py  requirements.txt
facetk/util/: __init__.py  ml.py
facevue/: README.md
python/: README.md  convertKeras2JS.py  randomizeImages.py
util/: __init__.py  im.py  ml.py
views/: analyzer-success.html  analyzer.html  base.html  pullmyhair.html  root.html  success.html
(+21 files in other folders)
