[tool.poetry]
authors = [""]
description = "Face-recognition AI for Communicating Emotions (FACE)"
name = "bbcs2021-face"
version = "0.1.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
dnspython = "^2.0.0"
flask = "^1.1.2"
waitress = "^1.4"
website = "^1.1"
opencv-python = "^4.5"
PySimpleGUI = "^4.43"
pyttsx3 = "^2.90"
imutils = "^0.5"
face_recognition = "^1.3"
cvlib = "^0.2"
tensorflow = "^2.5"
cmake = "^3.20"
dlib = "^19.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
