[tool.poetry]
authors = []
description = "Face-recognition AI for Communicating Emotions (FACE)"
name = "beebeesee"
version = "0.1.0"
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
dnspython = "^2.0.0"
flask = "^1.1.2"
waitress = "^1.4"
website = "^1.1"
opencv-python = "^4.5"
PySimpleGUI = "^4.43"
pyttsx3 = "^2.90"
imutils = "^0.5"
face_recognition = "^1.3"
cvlib = "^0.2"
tensorflow = "^2.5"
tensorflowjs = "^3.6"
cmake = "^3.20"
dlib = "^19.8.1"
pyopenssl = "^20.0"

[tool.poetry.dev-dependencies]
# black = "^21.0" # Commented out because poetry is utterly mindfucked

[tool.black]
line-length = 78
include = ".pyi?$"
exclude = """
.eggs/
.git/
build
dist
"""

[tool.poetry.scripts]
bbcs-debug = "beebeesee.cli:debug"
bbcs-deploy = "beebeesee.cli:deploy"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
